# talana-kombat-jrpg

./: .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .coveragerc  .env.example  manage.py
src/kombat/: apps.py  serializers.py  tests.py  urls_api.py  utils.py  viewsets.py
src/kombat/fixtures/: kombats_bad.json  kombats_ok.json
src/src/: settings.py  urls.py
